--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/05 --Our paper 'Bayesian Retinex Underwater Image Enhancement' has been recognized as <strong>Paper Prize Award 2023-Application</strong>by Engineering Applications of Artificial Intelligence.</li>
+<li> 2023/05 --One paper got accepted by <strong>TNNSL</strong>.</li>
 <li> 2023/05 --I am recognized as <strong>Outstanding Reviewer</strong>, CVPR 2023</li>
 <li> 2023/05 --We release the code (BeautyREC) and dataset (BeautyFace).</li>
 <li> 2023/04 --We release the code (UHDFour) and dataset (UHD-LL) of our ICLR 2023 work.</li>
@@ -1415,6 +1417,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <ul>
 <li>IEEE Signal Processing Society's top-25 most downloaded articles on IEEE Xplore®, Sept. 2021 - Sept. 2022.
 <li>Pattern Recognition (Elsevier Journal) <a href="./PDF/PR_honorable mention_2020.pdf">(Best Paper Honourable Mention)</a></li>
+<li>Engineering Applications of Artificial Intelligence (Elsevier Journal) <a href="./PDF/EAAI_IFAC_prize_2023_application.pdf">(Paper Prize Award 2023 - Application)</a></li>
 <li> Our team Feedforward won the <strong>second runner-up (3/317)</strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising</font></a>. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
 <li><strong>World’s Top 2% Scientists (2022)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2021_pubs_since_1788_wopp_extracted_202209), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
 <li><strong>World’s Top 2% Scientists (2021)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
