--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/05 --I am nominated with honor to serve as an <strong>Area Chair</strong> for NeurIPS 2023 Datasets and Benchmarks.</strong></li>
 <li> 2023/05 --Our paper 'Bayesian Retinex Underwater Image Enhancement' has been recognized as <strong>Paper Prize Award 2023-Application</strong> by Engineering Applications of Artificial Intelligence.</li>
 <li> 2023/05 --One paper got accepted by <strong>TNNSL</strong>.</li>
 <li> 2023/05 --I am recognized as <strong>Outstanding Reviewer</strong>, CVPR 2023</li>
@@ -1469,6 +1470,7 @@ Frontiers in Signal Processing</br>
 
 <br><strong>Area Chair</strong></br>
 BMVC 2022</br>
+NeurIPS 2023 Datasets and Benchmarks</br> 
 
 <br><strong>Co-organizer</strong></br>
 2nd CVPR Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2023</br>
