--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/05 --One paper got accepted by <strong>TIP</strong>. </li>
 <li> 2023/05 --One paper got accepted by <strong>TCSVT</strong>. </li>
 <li> 2023/05 --I am nominated with honor to serve as an <strong>Area Chair</strong> for NeurIPS 2023 Datasets and Benchmarks.</strong></li>
 <li> 2023/05 --Our paper 'Bayesian Retinex Underwater Image Enhancement' has been recognized as <strong>Paper Prize Award 2023-Application</strong> by Engineering Applications of Artificial Intelligence.</li>
