--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/06 --I am nominated with honor to serve as a <strong>Senior Program Committee</strong> of the AAAI 2024.</strong></li>
 <li> 2023/05 --One paper got accepted by <strong>TIP</strong>. </li>
 <li> 2023/05 --One paper got accepted by <strong>TCSVT</strong>. </li>
 <li> 2023/05 --I am nominated with honor to serve as an <strong>Area Chair</strong> for NeurIPS 2023 Datasets and Benchmarks.</strong></li>
@@ -1482,7 +1483,7 @@ IEEE Workshop on Multimedia Signal Processing (MMSP) 2022</br>
 <!--Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019</br>-->
 
 <br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
-AAAI 2022, 2023</br>
+AAAI 2022, 2023, 2024</br>
 <!--
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
