--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ li, ul {font-weight: normal;}
            <img src="./logo/IJCV.png" class="publogo" width="300 px">
             <p> 
                 <strong>
-                    <a href="">IJCV Special Issue</a>
+                    <a href="">IJCV Special Issue (Extend to 1 August 2023)</a>
                 </strong>
 		  <br> 
 		<em><b>Special Issue on Mobile Intelligent Photography and Imaging</b></em>
@@ -163,6 +163,8 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/06 --Our IJCV MIPI special issue has been extended to 1 August, 2023. </li>
+<li> 2023/06 --One paper got accepted by <strong>TIP</strong>. </li>
 <li> 2023/06 --I am nominated with honor to serve as a <strong>Senior Program Committee</strong> of the AAAI 2024.</strong></li>
 <li> 2023/05 --One paper got accepted by <strong>TIP</strong>. </li>
 <li> 2023/05 --One paper got accepted by <strong>TCSVT</strong>. </li>
