--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/06 --Two NTIRE workshop papers are selected as Oral. </li>
 <li> 2023/06 --Our IJCV MIPI special issue has been extended to 1 August, 2023. </li>
 <li> 2023/06 --One paper got accepted by <strong>TIP</strong>. </li>
 <li> 2023/06 --I am nominated with honor to serve as a <strong>Senior Program Committee</strong> of the AAAI 2024.</strong></li>
@@ -543,7 +544,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">BeautyREC: Robust, Efficient, and Content-preserving Makeup Transfer</a>
                 </strong>
 		  <br> 
-		<em><b>CVPRW, 2023</b></em>
+		<em><b>NTIRE CVPRW, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
                 <br> 
               Qixin Yan, Chunle Guo, Jixin Zhao, Yuekun Dai, Chen Change Loy, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
@@ -566,7 +567,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">FlexiCurve: Flexible Piecewise Curves Estimation for Photo Retouching</a>
                 </strong>
 		  <br> 
-		<em><b>CVPRW, 2023</b></em>
+		<em><b>NTIRE CVPRW, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
                 <br> 
               <b>Chongyi Li</b>, Chunle Guo, Shangchen Zhou, Qiming Ai, Ruicheng Feng, and Chen Change Loy.
                 <br>
