--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ li, ul {font-weight: normal;}
 <p>
 <small>📍 ABN-02b-11, NTU, SG</small><br>
 <small>📧lichongyi25 at gmail.com</small><br>
-
+<small>📧lichongyi at nankai.edu.cn/small><br>
+	
 <a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
