--- a/sub_publication.html
+++ b/sub_publication.html
@@ -26,7 +26,7 @@
   
 <p>
 <small>📧lichongyi25 at gmail.com</small><br>
-<small>📧chongyi.li at ntu.edu.sg</small><br><br>
+<small>📧lichongyi at nankai.edu.cn</small><br><br>
 <a href="https://github.com/Li-Chongyi" target="_blank">[GitHub]</a>  
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
