--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/06 --One paper got accepted by <strong>TCSVT</strong>. </li>
 <li> 2023/06 --Two NTIRE workshop papers are selected as Oral. </li>
 <li> 2023/06 --Our IJCV MIPI special issue has been extended to 1 August, 2023. </li>
 <li> 2023/06 --One paper got accepted by <strong>TIP</strong>. </li>
