--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/06 --One paper was selected as <strong>ESI Hot Paper</strong>. </li>
 <li> 2023/06 --One paper got accepted by <strong>TCSVT</strong>. </li>
 <li> 2023/06 --Two NTIRE workshop papers are selected as Oral. </li>
 <li> 2023/06 --Our IJCV MIPI special issue has been extended to 1 August, 2023. </li>
@@ -959,7 +960,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">Low-Light Image and Video Enhancement Using Deep Learning: A Survey</a>
                 </strong>
 		  <br> 
-		<em><b>TPAMI, 2021 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper]</font></a></b></em>
+		<em><b>TPAMI, 2021 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & ESI Hot Paper]</font></a></b></em>
                 <br> 
                <b>Chongyi Li</b>, Chunle Guo, Linghao Han, Jun Jiang, Ming-Ming Cheng, Jinwei Gu, Chen Change Loy.
                 <br>
