--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ li, ul {font-weight: normal;}
 <header>
 <h7>Chongyi Li</h7><br><br>
 <div>
-<img src="sub_img/lichongyi_photo_3.png" border="0" width="90%"><br></div><br>
+<img src="sub_img/lichongyi_nankai.jpg" border="0" width="90%"><br></div><br>
 
   
 <p>
