--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ research and develop advanced deep learning algorithms for image and video enhan
  
 <ul>
 <li> 2023/07 --8 papers got accepted by <strong>ICCV 2023</strong>.</li>
+<li> 2023/07 --One paper was selected as <strong>ESI Highly Cited Paper</strong>. </li>
 <li> 2023/06 --One paper was selected as <strong>ESI Hot Paper</strong>. </li>
 <li> 2023/06 --One paper got accepted by <strong>TCSVT</strong>. </li>
 <li> 2023/06 --Two NTIRE workshop papers are selected as Oral. </li>
