--- a/sub_publication.html
+++ b/sub_publication.html
@@ -49,8 +49,6 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preprint:</h4>
 
 <ol>
-<li> Yudong Wang, Jichang Guo, Wanru He, Huan Gao, Huihui Yue, Zenan Zhang, and <strong>Chongyi Li</strong>, <strong>Is Underwater Image Enhancement All Object Detectors Need?</strong>. <a href=" " target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a> <a href="https://li-chongyi.github.io/Underwater_Object_Detection_files/" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
-
 <li> <strong>Chongyi Li</strong>, Chunle Guo, Ruicheng Feng, Shangchen Zhou, and Chen Change Loy, <strong>CuDi: Curve Distillation for Efficient and Controllable Exposure Adjustment</strong>. <a href="https://arxiv.org/pdf/2207.14273.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a> <a href="https://li-chongyi.github.io/CuDi_files/" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
 <li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., <strong>Image Colorization: A Survey and Dataset</strong>. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a><a href="https://github.com/saeed-anwar/ColorSurvey" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
 
@@ -81,6 +79,7 @@
 <li> Runmin Cong, Wenyu Yang, Wei Zhang, <strong>Chongyi Li<sup>+</sup></strong>, Chunle Guo, Qingming Huang, and Sam Kwong, PUGAN: Physical Model-Guided Underwater Image Enhancement Using GAN with Dual-Discriminators, <strong><ud2>IEEE Transactions on Image Processing</ud2></strong> (SCI, IF=11.041), 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
 <li> Guojia Hou, Nan Li, Peixian Zhuang, Kunqian Li, Haihan Sun, and  <strong>Chongyi Li<sup>+</sup></strong>, Non-Uniform Illumination Underwater Image Restoration via Illumination Channel Sparsity Prior, <strong><ud2>IEEE Transactions on Circuits and Systems for Video Technology</ud2></strong> (SCI, IF=5.859), 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
 <li> Zheng Liang, Weidogn Zhang, Rui Ruan, Peixian Zhuang, Xiwang Xie, and  <strong>Chongyi Li<sup>+</sup></strong>, Underwater Image Quality Improvement via Color, Detail, and Contrast Restoration, <strong><ud2>IEEE Transactions on Circuits and Systems for Video Technology</ud2></strong> (SCI, IF=5.859), 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
+<li> Yudong Wang, Jichang Guo, Wanru He, Huan Gao, Huihui Yue, Zenan Zhang, and <strong>Chongyi Li</strong>, Is Underwater Image Enhancement All Object Detectors Need?, <strong><ud2>IEEE Journal of Oceanic Engineering</ud2></strong> (SCI, IF=3.554), 2021. <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a><a href="https://li-chongyi.github.io/Underwater_Object_Detection_files/" target="_blank"><font color="#1C86EE">[Code]</font></a></li> 
 </ol>  
 </ol>  
 
