--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">Iterative Prompt Learning for Unsupervised Backlit Image Enhancement</a>
                 </strong>
 		  <br> 
-		<em><b>2023 </b></em>
+		<em><b>ICCV, 2023 </b></em>
                 <br> 
               Zhexin Liang, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2303.17569">PDF</a>| 
 		    <a href="https://zhexinliang.github.io/CLIP_LIT_page/">Project Page</a>| 	
-                    <a href="https://zhexinliang.github.io/CLIP_LIT_page/g">Code</a>
+                    <a href="https://zhexinliang.github.io/CLIP_LIT_page/">Code</a>
                 </span>
             </p>
           </div>
@@ -307,7 +307,32 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 
-		
+	<div class="publication">
+         <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/backlit_demo.mp4"> <source src="logo/ProPainter_demo.mp4" type="video/mp4"></video>    
+	<p>     
+	
+                <strong>
+                    <a href="">ProPainter: Improving Video Inpainting with Enhanced Propagation and Efficient Transformer</a>
+                </strong>
+		  <br> 
+		<em><b>ICCV, 2023 </b></em>
+                <br> 
+              Shangchen Zhou, <b>Chongyi Li</b>, Kelvin C.K. Chan, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href=" ">PDF</a>| 
+		    <a href=" ">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br>
+	<br />
+	<br />
+	<br />
+	
 	   <div class="publication">
             <img src="logo/Fourmer_logo.png" onmouseover="this.src='logo/Fourmer_logo.png';" onmouseout="this.src='logo/Fourmer_logo.png';" class="publogo"  width="300 px">
             <p> 
