--- a/index.html
+++ b/index.html
@@ -358,6 +358,32 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 	<br />
+
+
+	  <div class="publication">
+            <img src="logo/Fourmer_logo.png" onmouseover="this.src='logo/flareICCV2023_logo.png';" onmouseout="this.src='logo/flareICCV2023_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Improving Lens Flare Removal with General-Purpose Pipeline and Multiple Light</a>
+                </strong>
+		  <br> 
+		<em><b>ICCV, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
+                <br> 
+              Yuyan Zhou,  Dong Liang, Songcan Chen, Shengjun Huang, Shuo Yang, and <b>Chongyi Li</b>.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	 <br>
+	<br />
+	<br />
+	<br />
 	
 	   <div class="publication">
             <img src="logo/Fourmer_logo.png" onmouseover="this.src='logo/Fourmer_logo.png';" onmouseout="this.src='logo/Fourmer_logo.png';" class="publogo"  width="300 px">
