--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 
 
 	   <div class="publication">
-            <img src="logo/Fourmer_logo.png" onmouseover="this.src='logo/LED_demo.png';" onmouseout="this.src='logo/LED_demo.png';" class="publogo"  width="300 px">
+            <img src="logo/LED_demo.png" onmouseover="this.src='logo/LED_demo.png';" onmouseout="this.src='logo/LED_demo.png';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">Lighting Every Darkness in Two Pairs: A Calibration-Free Pipeline for RAW Denoising</a>
@@ -361,7 +361,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 
 
 	  <div class="publication">
-            <img src="logo/Fourmer_logo.png" onmouseover="this.src='logo/flareICCV2023_logo.png';" onmouseout="this.src='logo/flareICCV2023_logo.png';" class="publogo"  width="300 px">
+            <img src="logo/flareICCV2023_logo.png" onmouseover="this.src='logo/flareICCV2023_logo.png';" onmouseout="this.src='logo/flareICCV2023_logo.png';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">Improving Lens Flare Removal with General-Purpose Pipeline and Multiple Light</a>
