--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">Lighting Every Darkness in Two Pairs: A Calibration-Free Pipeline for RAW Denoising</a>
                 </strong>
 		  <br> 
-		<em><b>ICCV, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
+		<em><b>ICCV, 2023 </b></em>
                 <br> 
               Xin Jin, Jiawen Xiao, Linghao Han Chunle Guo, Ruixuan Zhang, Xialei Liu, and <b>Chongyi Li</b>.
                 <br>
@@ -367,7 +367,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">Improving Lens Flare Removal with General-Purpose Pipeline and Multiple Light</a>
                 </strong>
 		  <br> 
-		<em><b>ICCV, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
+		<em><b>ICCV, 2023 </b></em>
                 <br> 
               Yuyan Zhou,  Dong Liang, Songcan Chen, Shengjun Huang, Shuo Yang, and <b>Chongyi Li</b>.
                 <br>
