--- a/index.html
+++ b/index.html
@@ -410,6 +410,33 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 	<br />
+
+
+		  <div class="publication">
+            <img src="logo/videodeblurICCV_logo.png" onmouseover="this.src='logo/videodeblurICCV_logo.png';" onmouseout="this.src='logo/videodeblurICCV_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Exploring Temporal Frequency Spectrum in Deep Video Deblurring</a>
+                </strong>
+		  <br> 
+		<em><b>ICCV, 2023 </b></em>
+                <br> 
+             QiZhu, Man Zhou,  Nansheng Zheng, <b>Chongyi Li</b>, Jie Huang, Feng Zhao.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	 <br>
+	<br />
+	<br />
+	<br />
+	
 	
 	   <div class="publication">
             <img src="logo/Fourmer_logo.png" onmouseover="this.src='logo/Fourmer_logo.png';" onmouseout="this.src='logo/Fourmer_logo.png';" class="publogo"  width="300 px">
