--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 
+	
+
 
 	<div class="publication">
             <img src="logo/videodeblurICCV_logo.png" onmouseover="this.src='logo/videodeblurICCV_logo.png';" onmouseout="this.src='logo/videodeblurICCV_logo.png';" class="publogo"  width="300 px">
@@ -449,6 +451,32 @@ research and develop advanced deep learning algorithms for image and video enhan
 		<em><b>ICCV, 2023 </b></em>
                 <br> 
               Nansheng Zheng, Yanmeng Dong, Xiangyu Rui, Jie Huang, <b>Chongyi Li</b>, Man Zhou, and Feng Zhao.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	 <br>
+	<br />
+	<br />
+	<br />
+
+
+	<div class="publication">
+            <img src="logo/IQAICCV_logo.png" onmouseover="this.src='logo/IQAICCV_logo.png';" onmouseout="this.src='logo/IQAICCV_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Troubleshooting Ethnic Quality Bias with Curriculum Domain Adaptation for Face Image Quality Assessment</a>
+                </strong>
+		  <br> 
+		<em><b>ICCV, 2023 </b></em>
+                <br> 
+              Fuzhao Ou, Baoliang Chen, <b>Chongyi Li</b>, Shiqi Wang, and Sam Kwong.
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
