--- a/sub_publication.html
+++ b/sub_publication.html
@@ -10,7 +10,7 @@
  <link rel="Shortcut Icon" href="./logo/hp_logo.jpg" sizes=16x16  type="image/x-icon" />
  <link rel="Bookmark" href="./logo/hp_logo.jpg" sizes=16x16 type="image/x-icon" />
   
-<title>Publications</title>
+<title>Publications</title> 
 
 <link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -79,7 +79,7 @@
 <li> Runmin Cong, Wenyu Yang, Wei Zhang, <strong>Chongyi Li<sup>+</sup></strong>, Chunle Guo, Qingming Huang, and Sam Kwong, PUGAN: Physical Model-Guided Underwater Image Enhancement Using GAN with Dual-Discriminators, <strong><ud2>IEEE Transactions on Image Processing</ud2></strong> (SCI, IF=11.041), 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
 <li> Guojia Hou, Nan Li, Peixian Zhuang, Kunqian Li, Haihan Sun, and  <strong>Chongyi Li<sup>+</sup></strong>, Non-Uniform Illumination Underwater Image Restoration via Illumination Channel Sparsity Prior, <strong><ud2>IEEE Transactions on Circuits and Systems for Video Technology</ud2></strong> (SCI, IF=5.859), 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
 <li> Zheng Liang, Weidong Zhang, Rui Ruan, Peixian Zhuang, Xiwang Xie, and  <strong>Chongyi Li<sup>+</sup></strong>, Underwater Image Quality Improvement via Color, Detail, and Contrast Restoration, <strong><ud2>IEEE Transactions on Circuits and Systems for Video Technology</ud2></strong> (SCI, IF=5.859), 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
-<li> Weidogn Zhang, Ling Zhou, Peixian Zhuang, Guohou Li, Xipeng Pan, Wenyi Zhao, and  <strong>Chongyi Li<sup>+</sup></strong>, Underwater Image Enhancement via Weighted Wavelet Visual Perception Fusion, <strong><ud2>IEEE Transactions on Circuits and Systems for Video Technology</ud2></strong> (SCI, IF=5.859), 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
+<li> Weidong Zhang, Ling Zhou, Peixian Zhuang, Guohou Li, Xipeng Pan, Wenyi Zhao, and  <strong>Chongyi Li<sup>+</sup></strong>, Underwater Image Enhancement via Weighted Wavelet Visual Perception Fusion, <strong><ud2>IEEE Transactions on Circuits and Systems for Video Technology</ud2></strong> (SCI, IF=5.859), 2023. <a href="" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
 <li> Yudong Wang, Jichang Guo, Wanru He, Huan Gao, Huihui Yue, Zenan Zhang, and <strong>Chongyi Li</strong>, Is Underwater Image Enhancement All Object Detectors Need?, <strong><ud2>IEEE Journal of Oceanic Engineering</ud2></strong> (SCI, IF=3.554), 2021. <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a><a href="https://li-chongyi.github.io/Underwater_Object_Detection_files/" target="_blank"><font color="#1C86EE">[Code]</font></a></li> 
 </ol>  
 </ol>  
