--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 
 
 	<div class="publication">
-            <img src="logo/lowlightICCV23_logo.png" onmouseover="this.src='logo/lowlightICCV23_logo.png';" onmouseout="this.src='logo/lowlightICCV23_logo.png';" class="publogo"  width="300 px">
+            <img src="logo/lowlightICCV23_logo.PNG" onmouseover="this.src='logo/lowlightICCV23_logo.PNG';" onmouseout="this.src='logo/lowlightICCV23_logo.PNG';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">Empowering Low-Light Image Enhancer through Customized Learnable Priors</a>
