--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 
 
 	<div class="publication">
-            <img src="logo/IQAICCV_logo.png" onmouseover="this.src='logo/IQAICCV_logo.png';" onmouseout="this.src='logo/IQAICCV_logo.png';" class="publogo"  width="300 px">
+            <img src="logo/IQAICCV_logo.PNG" onmouseover="this.src='logo/IQAICCV_logo.PNG';" onmouseout="this.src='logo/IQAICCV_logo.PNG';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">Troubleshooting Ethnic Quality Bias with Curriculum Domain Adaptation for Face Image Quality Assessment</a>
