--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 		  <br> 
 		<em><b>ICCV, 2023 </b></em>
                 <br> 
-              Xin Jin, Jiawen Xiao, Linghao Han Chunle Guo, Ruixuan Zhang, Xialei Liu, and <b>Chongyi Li</b>.
+              Xin Jin, Jiawen Xiao, Linghao Han, Chunle Guo, Ruixuan Zhang, Xialei Liu, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
