--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/08 --One ICCV 2023 paper is selected as Oral. </li>
 <li> 2023/07 --8 papers got accepted by <strong>ICCV 2023</strong>.</li>
 <li> 2023/07 --One paper was selected as <strong>ESI Highly Cited Paper</strong>. </li>
 <li> 2023/06 --One paper was selected as <strong>ESI Hot Paper</strong>. </li>
@@ -289,7 +290,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">Iterative Prompt Learning for Unsupervised Backlit Image Enhancement</a>
                 </strong>
 		  <br> 
-		<em><b>ICCV, 2023 </b></em>
+		<em><b>ICCV, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
                 <br> 
               Zhexin Liang, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
                 <br>
