--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/09 --One paper has been recognized as <strong>ESI Hot Paper</strong></li> 
 <li> 2023/08 --One ICCV 2023 paper is selected as Oral. </li>
 <li> 2023/07 --8 papers got accepted by <strong>ICCV 2023</strong>.</li>
 <li> 2023/07 --One paper was selected as <strong>ESI Highly Cited Paper</strong>. </li>
@@ -988,7 +989,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">Underwater Image Enhancement with Hyper-Laplacian Reflectance Priors</a>
                 </strong>
 		  <br> 
-		<em><b>TIP, 2022 <a href="" target="_blank"><font color="#ff0000">[TIP Popular Articles]</font></a></b></em>
+		<em><b>TIP, 2022 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & ESI Hot Paper & TIP Popular Articles]</font></a></b></em>
                 <br> 
                Peixian Zhuang, Jiamin Wu, Fatih Porikli, and <b>Chongyi Li<sup>+</sup</b>.
                 <br>
