--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Shangchen Zhou, <b>Chongyi Li</b>, Kelvin C.K. Chan, and Chen Change Loy.
                 <br>
                 <span class="links">
-                    <a href=" ">PDF</a>| 
-		    <a href=" ">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://arxiv.org/abs/2309.03897">PDF</a>| 
+		    <a href="https://shangchenzhou.com/projects/ProPainter/">Project Page</a>| 	
+                    <a href="https://github.com/sczhou/ProPainter">Code</a>
                 </span>
             </p>
           </div>
