--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Xin Jin, Jiawen Xiao, Linghao Han, Chunle Guo, Ruixuan Zhang, Xialei Liu, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://srameo.github.io/projects/led-iccv23/assets/paper/1819_arxiv_v1_more_visual_results.pdf">PDF</a>| 
+		    <a href="https://srameo.github.io/projects/led-iccv23/">Project Page</a>| 	
+                    <a href="https://github.com/Srameo/LED">Code</a>
                 </span>
             </p>
           </div>
@@ -375,9 +375,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Yuyan Zhou,  Dong Liang, Songcan Chen, Shengjun Huang, Shuo Yang, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://arxiv.org/abs/2308.16460">PDF</a>| 
+		    <a href="https://github.com/YuyanZhou1/Improving-Lens-Flare-Removal">Project Page</a>| 	
+                    <a href="https://github.com/YuyanZhou1/Improving-Lens-Flare-Removal">Code</a>
                 </span>
             </p>
           </div>
