--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Man Zhou,  Nansheng Zheng, Jie Huang, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://arxiv.org/pdf/2308.16083.pdf">PDF</a>| 
+		    <a href="https://github.com/manman1995/Awaresome-pansharpening">Project Page</a>| 	
+                    <a href="https://github.com/manman1995/Awaresome-pansharpening">Code</a>
                 </span>
             </p>
           </div>
@@ -459,9 +459,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Nansheng Zheng, Yanmeng Dong, Xiangyu Rui, Jie Huang, <b>Chongyi Li</b>, Man Zhou, and Feng Zhao.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://arxiv.org/abs/2309.01958">PDF</a>| 
+		    <a href="https://github.com/zheng980629/CUE">Project Page</a>| 	
+                    <a href="https://github.com/zheng980629/CUE">Code</a>
                 </span>
             </p>
           </div>
@@ -511,9 +511,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Man Zhou, Jie Huang, Chunle Guo, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://icml.cc/virtual/2023/oral/25538">PDF</a>| 
+		    <a href="https://icml.cc/virtual/2023/oral/25538">Project Page</a>| 	
+                    <a href="https://icml.cc/virtual/2023/oral/25538">Code</a>
                 </span>
             </p>
           </div>
@@ -536,9 +536,9 @@ research and develop advanced deep learning algorithms for image and video enhan
               Yuekun Dai, Yihang Luo, Shangchen Zhou, <b>Chongyi Li<sup>+</sup></b>, and Chen Change Loy.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Dai_Nighttime_Smartphone_Reflective_Flare_Removal_Using_Optical_Center_Symmetry_Prior_CVPR_2023_paper.pdf">PDF</a>| 
+		    <a href="https://ykdai.github.io/projects/BracketFlare">Project Page</a>| 	
+                    <a href="https://github.com/ykdai/BracketFlare">Code</a>
                 </span>
             </p>
           </div>
